@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v24.4.6-cur, done by sprscc13@mrn0b0dy.
--;-;-;2024-04-06 16:44:19, took 00:09:37, with 60 workers, on 544 cases, 0 failed, 0 traces, 0 retries
+-;-;-;2024-04-06 19:06:49, took 00:09:17, with 60 workers, on 544 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/p4lang-acl001.tst;p4lang-acl001.tst;success;p4lang: copp
 http://sources.freertr.org/cfg/p4lang-acl002.tst;p4lang-acl002.tst;success;p4lang: ingress access list
