@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v24.4.6-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2024-04-06 16:44:19, took 00:09:37, with 60 workers, on 544 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2024-04-06 19:06:49, took 00:09:17, with 60 workers, on 544 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
