@@ -15732,3 +15732,6 @@ qc pass: p4lang: etherip server over ipv4
 qc pass: p4lang: etherip server over ipv6
 qc pass: p4lang: etherip server over ipv4 loopback
 qc pass: p4lang: etherip server over ipv6 loopback
+---------------------------------- 2024-04-06 18:44:45 24.4.6
+qc pass: source list translation to pool
+qc pass: source address translation to pool
